test/errors/verify/test_4.vfy
# S_msg|op.avgsort[byte]	avg(T_pp)|op.avgsort[s]	min(T_pp)|op.minsort[s]	max(T_pp)|op.maxsort[s]	
0 	4.48 	2.98 	5.98 	
1 	4.51 	3.01 	6.01 	
2 	4.55 	3.05 	6.05 	
4 	4.52 	3.02 	6.02 	
8 	4.55 	3.05 	6.05 	
16 	4.61 	3.11 	6.11 	
32 	4.63 	3.13 	6.13 	
64 	4.79 	3.29 	6.29 	
